--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
     <title>Trafalgar</title>
   </head>
@@ -17,6 +20,7 @@
           <img src="./src/Ellipse 7.png" />
           <h4>Trafalgar</h4>
         </div>
+        <nav>
           <ul>
             <li><a href="#">About us</a></li>
             <li><a href="#">Testimonials</a></li>
@@ -24,6 +28,7 @@
             <li><a href="#">Find a doctor</a></li>
             <li><a href="#">Home</a></li>
           </ul>
+          </nav>
     </header>
     <section class="heading">
       <div class="row">
