--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
         health.
       </p>
       <div class="services-container">
-        
         <div class="row">
           <div class="col-4">
             <div class="search">
@@ -150,7 +149,7 @@
       </div>
     </section>
     <section class="testimonials">
-      <img src="/src/testimonials.png" />
+      <img src="/src/testimonials.png" width="100%" />
     </section>
   </body>
 </html>
